syntax = "proto3";

package user;


service UserService{
    rpc register (RegisterRequest) returns (TokenResponse);
    rpc login (LoginRequest) returns (TokenResponse);
    rpc getUser (GetUserRequest) returns (UserInfoResponse);
}

message Date{
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message Address{
    string houseNumber = 1 ;
    string streetName = 2;
    string village = 3;
    string district = 4;
    string province = 5;
}

message RegisterRequest{
    string email = 1;
    string firstName = 2;
    string lastName = 3;
    string dateOfBirth = 4; 
    string address = 5;
    string phone = 6;
    string password = 7;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message GetUserRequest{
    string user_id = 1;
}

message VerifyRequest{
    string token = 1;
}

message TokenResponse{
    string token = 1;
}

message UserInfoResponse{
    string email = 1;
    string first_name = 2;
    string last_name = 3;
    string date_of_birth = 4;
    string address = 5;
    string phone = 6;
}
